--- a/build.yaml
+++ b/build.yaml
@@ -13,7 +13,7 @@
 #
 ---
 include:
-  - board: nrfmicro_13
+  - board: nrfmicro_13_52833
     shield: jian_left
-  - board: nrfmicro_13
+  - board: nrfmicro_13_52833
     shield: jian_right
