--- a/config/west.yml
+++ b/config/west.yml
@@ -9,7 +9,7 @@ manifest:
   projects:
     - name: zmk
       remote: urob
-      revision: main
+      revision: mouse-3.2
       import: app/west.yml
   self:
     path: config
