--- a/config/west.yml
+++ b/config/west.yml
@@ -2,14 +2,15 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: petejohanson
-      url-base: https://github.com/petejohanson
-    - name: urob
-      url-base: https://github.com/urob
+    - name: ergonautkb
+      url-base: https://github.com/ergonautkb
   projects:
     - name: zmk
-      remote: urob
+      remote: zmkfirmware
       revision: main
       import: app/west.yml
+    - name: ergonautkb-zmk-module
+      remote: ergonautkb
+      revision: main
   self:
     path: config
